kube/flask-example-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flask-example
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-example
    spec:
      containers:
      - name: flask-example
        image: atoserik/flask-kube-example:https
        ports:
        - containerPort: 5555
