kube/flask-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-example-service
spec:
  selector:
    app: flask-example
  ports:
  - protocol: "TCP"
    port: 5555
