kube/flask-kube-example.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flask-example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/default-backend: flask-example-service
spec:
  rules:
    - host: localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: flask-example-service
            servicePort: 5555

---
apiVersion: v1
kind: Service
metadata:
  name: flask-example-service
spec:
  selector:
    app: flask-example
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 5555
  type: LoadBalancer

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: flask-example
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-example
    spec:
      containers:
      - name: flask-example
        image: atoserik/flask-kube-example:http
        ports:
        - containerPort: 5555
